--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,23 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>SpaceExLauncher</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <title>SpaceExLauncher</title>
+    <base href="/" />
+    <meta
+      name="keywords"
+      content="Space Ex Launcher program, publicis sapient test assignment"
+    />
+    <meta
+      name="description"
+      content="Space-ex-launcher demo test assignment with all best practices implemented"
+    />
+    <meta name="author" content="Prashant Kumar Singh" />
+    <meta name="date" content="2020-09-06" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+  </head>
+  <body>
+    <app-root></app-root>
+  </body>
 </html>
